fix phonegap bug to cache list headers when offline

--- a/KeithLink/KeithLink.Web.Presentation/phonegap-app/BEKPhoneGap/www/scss/components/_user-bar.scss
+++ b/KeithLink/KeithLink.Web.Presentation/phonegap-app/BEKPhoneGap/www/scss/components/_user-bar.scss
@@ -54,7 +54,6 @@
 
 .user-bar-mobile {
   background-color: $background;
-  // height: 65px;
   border-bottom: 1px solid $color-border;
 
   text-align: center;
@@ -74,32 +73,36 @@
     float: right;
     margin: 0;
 
-    a {
+    // a {
+    //   font-size: 24px;
+    //   color: #9E987E;
+    //   text-decoration: none;
+    //   li.mobile-menu-item {
+    //     display: inline-block;
+    //     padding: 8px 10px;
+    //   }
+    // }
+
+    li.mobile-menu-item {
+      display: inline-block;
+      padding: 8px 10px;
       font-size: 24px;
       color: #9E987E;
       text-decoration: none;
-      li {
-        display: inline-block;
-        padding: 8px 10px;
-      }
     }
   }
 
   ul.left-mobile-menu {
     float: left;
-    a {
-      li {
-        border-right: 1px solid $color-border;
-      }
+    li.mobile-menu-item {
+      border-right: 1px solid $color-border;
     }
   }
   ul.right-mobile-menu {
     float: right;
 
-    a {
-      li {
-        border-left: 1px solid $color-border;
-      }
+    li.mobile-menu-item {
+      border-left: 1px solid $color-border;
     }
   }
 }
